ANTLR/twoeightyParser.py
# Generated from twoeighty.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class twoeightyParser ( Parser ):

    grammarFileName = "twoeighty.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'ms'", "'s'", "':'", "'clr'", 
                     "'clear'", "'rect'", "'r'", "','", "'circle'", "'c'", 
                     "'line'", "'l'", "'arc'", "'a'", "'++'", "'--'", "'%'", 
                     "'/'", "'//'", "'*'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "INT" ]

    RULE_program = 0
    RULE_variableDec = 1
    RULE_loop = 2
    RULE_statement = 3
    RULE_clear = 4
    RULE_shape = 5
    RULE_rectangle = 6
    RULE_circle = 7
    RULE_line = 8
    RULE_arc = 9
    RULE_increment = 10
    RULE_decrement = 11
    RULE_variableAssign = 12
    RULE_value = 13
    RULE_op = 14

    ruleNames =  [ "program", "variableDec", "loop", "statement", "clear", 
                   "shape", "rectangle", "circle", "line", "arc", "increment", 
                   "decrement", "variableAssign", "value", "op" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    ID=25
    INT=26

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loop(self):
            return self.getTypedRuleContext(twoeightyParser.LoopContext,0)


        def variableDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(twoeightyParser.VariableDecContext)
            else:
                return self.getTypedRuleContext(twoeightyParser.VariableDecContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(twoeightyParser.StatementContext)
            else:
                return self.getTypedRuleContext(twoeightyParser.StatementContext,i)


        def getRuleIndex(self):
            return twoeightyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = twoeightyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==twoeightyParser.ID:
                self.state = 30
                self.variableDec()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.loop()
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << twoeightyParser.T__5) | (1 << twoeightyParser.T__6) | (1 << twoeightyParser.T__7) | (1 << twoeightyParser.T__8) | (1 << twoeightyParser.T__10) | (1 << twoeightyParser.T__11) | (1 << twoeightyParser.T__12) | (1 << twoeightyParser.T__13) | (1 << twoeightyParser.T__14) | (1 << twoeightyParser.T__15) | (1 << twoeightyParser.ID))) != 0):
                self.state = 37
                self.statement()
                self.state = 38
                self.match(twoeightyParser.T__0)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(twoeightyParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(twoeightyParser.ValueContext,0)


        def getRuleIndex(self):
            return twoeightyParser.RULE_variableDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDec" ):
                listener.enterVariableDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDec" ):
                listener.exitVariableDec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDec" ):
                return visitor.visitVariableDec(self)
            else:
                return visitor.visitChildren(self)




    def variableDec(self):

        localctx = twoeightyParser.VariableDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variableDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(twoeightyParser.ID)
            self.state = 46
            self.match(twoeightyParser.T__1)
            self.state = 47
            self.value(0)
            self.state = 48
            self.match(twoeightyParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.unit = None # Token

        def INT(self):
            return self.getToken(twoeightyParser.INT, 0)

        def getRuleIndex(self):
            return twoeightyParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = twoeightyParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(twoeightyParser.INT)
            self.state = 51
            localctx.unit = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==twoeightyParser.T__2 or _la==twoeightyParser.T__3):
                localctx.unit = self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 52
            self.match(twoeightyParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clear(self):
            return self.getTypedRuleContext(twoeightyParser.ClearContext,0)


        def shape(self):
            return self.getTypedRuleContext(twoeightyParser.ShapeContext,0)


        def increment(self):
            return self.getTypedRuleContext(twoeightyParser.IncrementContext,0)


        def decrement(self):
            return self.getTypedRuleContext(twoeightyParser.DecrementContext,0)


        def variableAssign(self):
            return self.getTypedRuleContext(twoeightyParser.VariableAssignContext,0)


        def getRuleIndex(self):
            return twoeightyParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = twoeightyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 59
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.clear()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.shape()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.increment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.decrement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 58
                self.variableAssign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClearContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return twoeightyParser.RULE_clear

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClear" ):
                listener.enterClear(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClear" ):
                listener.exitClear(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClear" ):
                return visitor.visitClear(self)
            else:
                return visitor.visitChildren(self)




    def clear(self):

        localctx = twoeightyParser.ClearContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_clear)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not(_la==twoeightyParser.T__5 or _la==twoeightyParser.T__6):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ShapeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rectangle(self):
            return self.getTypedRuleContext(twoeightyParser.RectangleContext,0)


        def circle(self):
            return self.getTypedRuleContext(twoeightyParser.CircleContext,0)


        def line(self):
            return self.getTypedRuleContext(twoeightyParser.LineContext,0)


        def arc(self):
            return self.getTypedRuleContext(twoeightyParser.ArcContext,0)


        def getRuleIndex(self):
            return twoeightyParser.RULE_shape

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShape" ):
                listener.enterShape(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShape" ):
                listener.exitShape(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShape" ):
                return visitor.visitShape(self)
            else:
                return visitor.visitChildren(self)




    def shape(self):

        localctx = twoeightyParser.ShapeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_shape)
        try:
            self.state = 67
            token = self._input.LA(1)
            if token in [twoeightyParser.T__7, twoeightyParser.T__8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.rectangle()

            elif token in [twoeightyParser.T__10, twoeightyParser.T__11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.circle()

            elif token in [twoeightyParser.T__12, twoeightyParser.T__13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.line()

            elif token in [twoeightyParser.T__14, twoeightyParser.T__15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.arc()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RectangleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x = None # ValueContext
            self.y = None # ValueContext
            self.w = None # ValueContext
            self.h = None # ValueContext

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(twoeightyParser.ValueContext)
            else:
                return self.getTypedRuleContext(twoeightyParser.ValueContext,i)


        def getRuleIndex(self):
            return twoeightyParser.RULE_rectangle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRectangle" ):
                listener.enterRectangle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRectangle" ):
                listener.exitRectangle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRectangle" ):
                return visitor.visitRectangle(self)
            else:
                return visitor.visitChildren(self)




    def rectangle(self):

        localctx = twoeightyParser.RectangleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_rectangle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            _la = self._input.LA(1)
            if not(_la==twoeightyParser.T__7 or _la==twoeightyParser.T__8):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 70
            localctx.x = self.value(0)
            self.state = 71
            self.match(twoeightyParser.T__9)
            self.state = 72
            localctx.y = self.value(0)
            self.state = 73
            self.match(twoeightyParser.T__9)
            self.state = 74
            localctx.w = self.value(0)
            self.state = 75
            self.match(twoeightyParser.T__9)
            self.state = 76
            localctx.h = self.value(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CircleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x = None # ValueContext
            self.y = None # ValueContext
            self.r = None # ValueContext

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(twoeightyParser.ValueContext)
            else:
                return self.getTypedRuleContext(twoeightyParser.ValueContext,i)


        def getRuleIndex(self):
            return twoeightyParser.RULE_circle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCircle" ):
                listener.enterCircle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCircle" ):
                listener.exitCircle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCircle" ):
                return visitor.visitCircle(self)
            else:
                return visitor.visitChildren(self)




    def circle(self):

        localctx = twoeightyParser.CircleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_circle)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            _la = self._input.LA(1)
            if not(_la==twoeightyParser.T__10 or _la==twoeightyParser.T__11):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 79
            localctx.x = self.value(0)
            self.state = 80
            self.match(twoeightyParser.T__9)
            self.state = 81
            localctx.y = self.value(0)
            self.state = 82
            self.match(twoeightyParser.T__9)
            self.state = 83
            localctx.r = self.value(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x1 = None # ValueContext
            self.y1 = None # ValueContext
            self.x2 = None # ValueContext
            self.y2 = None # ValueContext

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(twoeightyParser.ValueContext)
            else:
                return self.getTypedRuleContext(twoeightyParser.ValueContext,i)


        def getRuleIndex(self):
            return twoeightyParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = twoeightyParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if not(_la==twoeightyParser.T__12 or _la==twoeightyParser.T__13):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 86
            localctx.x1 = self.value(0)
            self.state = 87
            self.match(twoeightyParser.T__9)
            self.state = 88
            localctx.y1 = self.value(0)
            self.state = 89
            self.match(twoeightyParser.T__9)
            self.state = 90
            localctx.x2 = self.value(0)
            self.state = 91
            self.match(twoeightyParser.T__9)
            self.state = 92
            localctx.y2 = self.value(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x1 = None # ValueContext
            self.y1 = None # ValueContext
            self.x2 = None # ValueContext
            self.y2 = None # ValueContext
            self.cx = None # ValueContext
            self.cy = None # ValueContext

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(twoeightyParser.ValueContext)
            else:
                return self.getTypedRuleContext(twoeightyParser.ValueContext,i)


        def getRuleIndex(self):
            return twoeightyParser.RULE_arc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArc" ):
                listener.enterArc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArc" ):
                listener.exitArc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArc" ):
                return visitor.visitArc(self)
            else:
                return visitor.visitChildren(self)




    def arc(self):

        localctx = twoeightyParser.ArcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==twoeightyParser.T__14 or _la==twoeightyParser.T__15):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 95
            localctx.x1 = self.value(0)
            self.state = 96
            self.match(twoeightyParser.T__9)
            self.state = 97
            localctx.y1 = self.value(0)
            self.state = 98
            self.match(twoeightyParser.T__9)
            self.state = 99
            localctx.x2 = self.value(0)
            self.state = 100
            self.match(twoeightyParser.T__9)
            self.state = 101
            localctx.y2 = self.value(0)
            self.state = 102
            self.match(twoeightyParser.T__9)
            self.state = 103
            localctx.cx = self.value(0)
            self.state = 104
            self.match(twoeightyParser.T__9)
            self.state = 105
            localctx.cy = self.value(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncrementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(twoeightyParser.ID, 0)

        def getRuleIndex(self):
            return twoeightyParser.RULE_increment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncrement" ):
                listener.enterIncrement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncrement" ):
                listener.exitIncrement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncrement" ):
                return visitor.visitIncrement(self)
            else:
                return visitor.visitChildren(self)




    def increment(self):

        localctx = twoeightyParser.IncrementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_increment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(twoeightyParser.ID)
            self.state = 108
            self.match(twoeightyParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DecrementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(twoeightyParser.ID, 0)

        def getRuleIndex(self):
            return twoeightyParser.RULE_decrement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecrement" ):
                listener.enterDecrement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecrement" ):
                listener.exitDecrement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecrement" ):
                return visitor.visitDecrement(self)
            else:
                return visitor.visitChildren(self)




    def decrement(self):

        localctx = twoeightyParser.DecrementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_decrement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(twoeightyParser.ID)
            self.state = 111
            self.match(twoeightyParser.T__17)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableAssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(twoeightyParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(twoeightyParser.ValueContext,0)


        def getRuleIndex(self):
            return twoeightyParser.RULE_variableAssign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableAssign" ):
                listener.enterVariableAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableAssign" ):
                listener.exitVariableAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableAssign" ):
                return visitor.visitVariableAssign(self)
            else:
                return visitor.visitChildren(self)




    def variableAssign(self):

        localctx = twoeightyParser.VariableAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_variableAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(twoeightyParser.ID)
            self.state = 114
            self.match(twoeightyParser.T__1)
            self.state = 115
            self.value(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return twoeightyParser.RULE_value

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class IntegerContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a twoeightyParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(twoeightyParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)


    class VariableContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a twoeightyParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(twoeightyParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)


    class ThousandContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a twoeightyParser.ValueContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThousand" ):
                listener.enterThousand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThousand" ):
                listener.exitThousand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThousand" ):
                return visitor.visitThousand(self)
            else:
                return visitor.visitChildren(self)


    class BinopContext(ValueContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a twoeightyParser.ValueContext
            super().__init__(parser)
            self.l = None # ValueContext
            self.r = None # ValueContext
            self.copyFrom(ctx)

        def op(self):
            return self.getTypedRuleContext(twoeightyParser.OpContext,0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(twoeightyParser.ValueContext)
            else:
                return self.getTypedRuleContext(twoeightyParser.ValueContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinop" ):
                listener.enterBinop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinop" ):
                listener.exitBinop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinop" ):
                return visitor.visitBinop(self)
            else:
                return visitor.visitChildren(self)



    def value(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = twoeightyParser.ValueContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_value, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            token = self._input.LA(1)
            if token in [twoeightyParser.T__18]:
                localctx = twoeightyParser.ThousandContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 118
                self.match(twoeightyParser.T__18)

            elif token in [twoeightyParser.ID]:
                localctx = twoeightyParser.VariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 119
                self.match(twoeightyParser.ID)

            elif token in [twoeightyParser.INT]:
                localctx = twoeightyParser.IntegerContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 120
                self.match(twoeightyParser.INT)

            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = twoeightyParser.BinopContext(self, twoeightyParser.ValueContext(self, _parentctx, _parentState))
                    localctx.l = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_value)
                    self.state = 123
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 124
                    self.op()
                    self.state = 125
                    localctx.r = self.value(5) 
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class OpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return twoeightyParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp" ):
                return visitor.visitOp(self)
            else:
                return visitor.visitChildren(self)




    def op(self):
